addons/ingress/nginx-gateway-fabric/manifests/namespace.yaml
# SPDX-FileCopyrightText: © 2025 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

apiVersion: v1
kind: Namespace
metadata:
  name: nginx-gateway
