addons/ingress/nginx-gateway-fabric/manifests/deployment.yaml
# SPDX-FileCopyrightText: © 2025 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-gateway
  namespace: nginx-gateway
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/part-of: nginx-gateway
    app.kubernetes.io/name: nginx-gateway
    app.kubernetes.io/instance: nginx-gateway
    app.kubernetes.io/version: "2.2.2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/name: nginx-gateway
      app.kubernetes.io/instance: nginx-gateway
  template:
    metadata:
      labels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/name: nginx-gateway
        app.kubernetes.io/instance: nginx-gateway
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9113"
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - controller
        - --gateway-ctlr-name=gateway.nginx.org/nginx-gateway-controller
        - --gatewayclass=nginx
        - --config=nginx-gateway-config
        - --service=nginx-gateway
        - --agent-tls-secret=agent-tls
        - --metrics-port=9113
        - --health-port=8081
        - --leader-election-lock-name=nginx-gateway-leader-election
        image: ghcr.io/nginx/nginx-gateway-fabric:2.2.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /healthz
            port: health
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: nginx-gateway-controller
        ports:
        - name: agent-grpc
          containerPort: 8443
        - name: metrics
          containerPort: 9113
        - name: health
          containerPort: 8081
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /readyz
            port: health
          initialDelaySeconds: 3
          periodSeconds: 1
        resources:
          requests:
            cpu: 100m
            memory: 90Mi
        securityContext:
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
            - ALL
          allowPrivilegeEscalation: true
          runAsUser: 101
          runAsGroup: 1001
        volumeMounts:
        - name: nginx-agent-tls
          mountPath: /var/run/secrets/ngf
      terminationGracePeriodSeconds: 30
      serviceAccountName: nginx-gateway
      securityContext:
        fsGroup: 1001
        runAsNonRoot: true
      volumes:
      - name: nginx-agent-tls
        secret:
          secretName: server-tls
