addons/ingress/nginx-gateway-fabric/manifests/service.yaml
# SPDX-FileCopyrightText: © 2025 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway
  namespace: nginx-gateway
  labels:
    app.kubernetes.io/part-of: nginx-gateway
    app.kubernetes.io/name: nginx-gateway
    app.kubernetes.io/instance: nginx-gateway
    app.kubernetes.io/version: "2.2.2"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nginx-gateway
    app.kubernetes.io/instance: nginx-gateway
  ports:
  - name: agent-grpc
    port: 443
    protocol: TCP
    targetPort: 8443
